trying to avoid that jumping

--- a/anguhashblog-app/src/app/app.component.scss
+++ b/anguhashblog-app/src/app/app.component.scss
@@ -98,6 +98,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    padding: 1rem 4rem;
+    margin-left: 14.5vw;
+    padding: 1rem 3rem 2rem;
   }
 }
