--- a/anguhashblog-app/src/styles.scss
+++ b/anguhashblog-app/src/styles.scss
@@ -10,6 +10,8 @@ body {
 }
 
 .page {
+  display: flex;
+  flex-direction: column;
 
   h3 {
     font-size: 1.2rem;
